// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PodIndicator it renders the pod indicator with the correct name with a formatted name 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-indicator"
  >
    <label
      class="PodBrowser-indicatorLabel"
      for="pod-indicator-prompt"
    >
      <span>
        Pod: 
      </span>
      <button
        class="PodBrowser-button PodBrowser-button--prompt PodBrowser-indicatorPrompt"
        data-testid="pod-indicator-prompt"
        id="pod-indicator-prompt"
        title="Alice"
        type="button"
      >
        <span
          class="PodBrowser-indicatorName"
        >
          Alice
        </span>
      </button>
    </label>
  </div>
</DocumentFragment>
`;

exports[`PodIndicator it renders the pod indicator with the correct name with a name 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-indicator"
  >
    <label
      class="PodBrowser-indicatorLabel"
      for="pod-indicator-prompt"
    >
      <span>
        Pod: 
      </span>
      <button
        class="PodBrowser-button PodBrowser-button--prompt PodBrowser-indicatorPrompt"
        data-testid="pod-indicator-prompt"
        id="pod-indicator-prompt"
        title="Bob"
        type="button"
      >
        <span
          class="PodBrowser-indicatorName"
        >
          Bob
        </span>
      </button>
    </label>
  </div>
</DocumentFragment>
`;

exports[`PodIndicator it returns null if there is no profile 1`] = `[Function]`;
